[tool.poetry]
name = "lilt-pin"
version = "0.1.0"
description = ""
authors = ["Kamila Dzhavatova <kamila.dzhavatova@gmail.com>"]
readme = "README.md"
packages = [{include = "lilt_pin"}]

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
